Force hide dock in headless mode

Bug: 750505
Change-Id: I3c870ac9ea5c463c49946443504629e2df3679c5
Reviewed-on: https://chromium-review.googlesource.com/634724
Reviewed-by: David Vallet <dvallet@chromium.org>
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Commit-Queue: David Vallet <dvallet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497337}
Former-commit-id: c1a5a6c64e418c1e66fa938c553dfd7a0227ef0d